:sparkles: Add Article, Method and Exercise Links

--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "rich-markdown-editor",
+  "name": "markdown-editor",
   "description": "A rich text editor with Markdown shortcuts",
   "version": "11.21.3",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
   "license": "BSD-3-Clause",
-  "funding": "https://github.com/sponsors/outline",
   "scripts": {
     "test": "jest",
     "lint": "tsc --noEmit && eslint '*/**/*.{js,ts,tsx}' --quiet",
@@ -116,7 +115,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/outline/rich-markdown-editor.git"
+    "url": "git+https://github.com/wedevign-de/markdown-editor.git"
   },
   "keywords": [
     "editor",
@@ -126,7 +125,7 @@
   ],
   "author": "Tom Moor <tom.moor@gmail.com>",
   "bugs": {
-    "url": "https://github.com/outline/rich-markdown-editor/issues"
+    "url": "https://github.com/wedevign-de/markdown-editor/issues"
   },
-  "homepage": "https://github.com/outline/rich-markdown-editor#readme"
+  "homepage": "https://github.com/wedevign-de/markdown-editor#readme"
 }
